--- a/pytest.ini
+++ b/pytest.ini
@@ -1,5 +1,5 @@
 [pytest]
-pythonpath = . src
+pythonpath = . app
 markers =
     sqlitecsv: tests that are connected with transferring data from db to csv
     dbvalidation: tests for input validation
